# fast-harness

./: .gitignore  LICENSE  README.md  install.sh  purge-cdn.sh
.serena/: project.yml
docs/: ahe-integration.md  blog-local-harness.md  claude-code-agent-sdk-docs.md  commands-guide.md  film-platform-harness-agent-coding.md  guide.md
plugin/: configure.sh  update.sh  (+1 more)
runtime/: .env.example  .gitignore  Dockerfile  Makefile  config.yaml  feedback.md  pyproject.toml  pyrightconfig.json  requirements.txt
runtime/src/: config.py  main.py
runtime/src/api/: deps.py  router.py  schemas.py
runtime/src/core/: agent.py  auth.py  bug_pipeline.py  git.py  sandbox.py  session.py  workspace.py
runtime/src/harness/: commands.py  loader.py  registry.py
runtime/tests/: test_agent_multiturn.py  test_auth.py  test_command_handling.py  test_git_branching.py  test_runtime_config.py  test_workspace_session_flow.py
runtime/ui/: index.html  login.html
runtime/ui/bug-fix/: app.js  index.html  styles.css
runtime/workspaces/.sessions/: 26370c8b438c.json  568635f3f78f.json  5ac860705550.json  612ef880319c.json  6990dcf61f93.json  870cab85514c.json  b70d76c5aa94.json  d180fc14f3cd.json  f967ceed7ccc.json
runtime/workspaces/.workspaces/: ws-09c501d5a7.json  ws-2095bd03a8.json  ws-35e6604608.json  ws-443723caf3.json  ws-4495b715e0.json  ws-59ecf2fbef.json  ws-83eefaf3b8.json  ws-8f6c7b0e6b.json  ws-9771e37ccc.json  ws-b281f594fe.json  ws-c578204342.json  ws-cbb0a19b06.json  ws-cd5acdf82a.json  ws-efbfb23c90.json  ws-f335386019.json
runtime/workspaces/2efcfff1e99c/: README.md
(+86 files in other folders)
