[project]
name = "fast-harness-runtime"
version = "0.1.0"
description = "Claude Code Agent SDK 服务化运行时 — 将 fast-harness 能力搬到服务端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
    "sse-starlette>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
